--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ ul {
 
 .nomes-links a {
   text-decoration: none;
-  color: #68A897;
+  color: #75BFAB;
   margin: 0 20px;
   transition: color 0.3s;
 }
