--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ ul {
   color: #ffffff;
   width: 100%;
   margin: 0 auto; /* Centralizar a nave bar horizontalmente */
-  height: 100px; /* Espessura (altura) da nave bar */
+  height: 120px; /* Espessura (altura) da nave bar */
   display: flex;
   justify-content: space-between;
   align-items: flex-end;
@@ -73,7 +73,7 @@ ul {
   background-color: #68a897;
   color: white;
   padding: 20px 0;
-  height: 40%;
+  height: 50%;
   bottom: 0;
   width: 100%;
   font-family: "Montserrat", sans-serif;
@@ -237,17 +237,19 @@ ul li img {
 }
 
 .solicitar-conteiner select {
-  width: 370px;
+  width: 400px;
   padding: 10px;
   border: 1px solid #ccc;
   border-radius: 3px;
+  margin-bottom: 20px;
+  margin-left: 30px;
   font-size: 14px;
 }
 
 .solicitar-conteiner input[type="text"],
 input[type="datetime-local"] {
   width: 380px;
-  margin-left: 25px;
+  margin-left:35px;
   margin-bottom: 20px;
   padding: 10px;
   border: 1px solid #ccc;
@@ -432,6 +434,29 @@ h3 {
 }
 
 
+/* Estilos para dispositivos móveis */
+@media (max-width: 768px) {
+  .profissionais, .footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .profissional, .footer-section {
+    width: 100%; /* Ocupa toda a largura da tela */
+    margin-bottom: 20px; /* Adiciona espaço entre as divs */
+  }
+
+  .especializacoes {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+   .quadrado-espec {
+    width: 100%;
+    margin-bottom: 20px;
+  }
+}
 
 
 
