🚝🚣 Checkpoint ./Sobre.html:58483462/3597 ./style.css:58483462/52:58517880/1118

--- a/style.css
+++ b/style.css
@@ -17,11 +17,12 @@ ul {
   color: #ffffff;
   width: 100%;
   margin: 0 auto; /* Centralizar a nave bar horizontalmente */
-  height: 120px; /* Espessura (altura) da nave bar */
+  height: 140px; /* Espessura (altura) da nave bar */
   display: flex;
   justify-content: space-between;
   align-items: flex-end;
   position: relative; /* Posição relativa para a linha */
+  overflow: hidden;
 }
 
 .nav-bar::after {
@@ -73,10 +74,11 @@ ul {
   background-color: #68a897;
   color: white;
   padding: 20px 0;
-  height: 50%;
+  height: 60%;
   bottom: 0;
   width: 100%;
   font-family: "Montserrat", sans-serif;
+  overflow: hidden;
 }
 
 .container {
@@ -273,6 +275,10 @@ input[type="datetime-local"] {
   display: flex;
   justify-content: space-around;
 }
+.texto h3{
+  margin-left: 60px;
+  width: 50%;
+}
 
 h3 {
   color: #526175;
@@ -436,15 +442,18 @@ h3 {
 
 /* Estilos para dispositivos móveis */
 @media (max-width: 768px) {
-  .profissionais, .footer {
+  .profissionais, .footer{
     display: flex;
     flex-direction: column;
     align-items: center;
+    overflow: hidden;
+    
   }
 
   .profissional, .footer-section {
     width: 100%; /* Ocupa toda a largura da tela */
     margin-bottom: 20px; /* Adiciona espaço entre as divs */
+    overflow: hidden;
   }
 
   .especializacoes {
@@ -455,6 +464,7 @@ h3 {
    .quadrado-espec {
     width: 100%;
     margin-bottom: 20px;
+    overflow: hidden;
   }
 }
 
