--- a/style.css
+++ b/style.css
@@ -329,20 +329,17 @@ h3 {
   flex-direction: column;
   text-align: left;
   font-family: "Montserrat", sans-serif;
-  border: 1px solid rgb(210, 206, 214);
+  border: 1px solid #75bfab;
   border-radius: 20px;
   width: 35%;
 }
 
-.login-container 
-
 .login-container input {
-  margin-bottom: 15px;
   font-size: 18px;
-  padding: 5px;
-  width: 100%;
+  padding: 8px;
+  width: 300px;
   border: 1px solid lightgray;
-  border-radius: 2px;
+  border-radius: 3px;
   font-family: "Montserrat", sans-serif;
 }
 
@@ -354,15 +351,17 @@ h3 {
   display: block;
   font-size: 18px;
   margin-bottom: 5px;
+  font-weight: bold;
+  color: #526175;
 }
 
 .login-container select {
-  width: 300px;
+  width: 100%;
   font-family: "Montserrat", sans-serif;
-  padding: 10px;
+  padding: 8px;
   border: 1px solid #cccccc;
   border-radius: 3px;
-  font-size: 14px;
+  font-size: 18px;
 }
 
 #identificador {
