--- a/style.css
+++ b/style.css
@@ -338,27 +338,37 @@ input[type="datetime-local"] {
   }
 
   .solicitar-conteiner {
-    margin: 20px;
+    margin: 10px;
     float: none;
-    width: 90%;
+    width: 80%;
     margin-left: auto;
     margin-right: auto;
+    padding: 10px;
   }
 
   .solicitar-conteiner label {
-    width: 100%;
+    width: 30%;
+    font-size: 14px
     margin-bottom: 5px;
   }
 
   .solicitar-conteiner select,
   .solicitar-conteiner input[type="text"],
   .solicitar-conteiner input[type="datetime-local"] {
-    width: 100%;
+    width: 80%;
+    font-size: 12px;
+    padding: 5px;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+    margin-bottom: 10px;
+  }
+  .solicitar-conteiner form{
+    padding: 5px;
+  }
+  .solicitar-conteiner h1{
+    font-size: 45px;
   }
 }
-
-
-
 
 .profissionais {
   display: flex;
