--- a/style.css
+++ b/style.css
@@ -251,6 +251,44 @@ ul li {
   list-style-type: none;
   margin-bottom: 10px;
 }
+/* Estilos para telas menores (celulares) */
+@media screen and (max-width: 600px) {
+  .footer {
+    text-align: center; /* Centralizar o conteúdo */
+    height: auto; /* Remover a altura fixa */
+  }
+
+  .container {
+    flex-direction: column; /* Empilhar os elementos verticalmente */
+  }
+
+  .footer h2 {
+    font-size: 30px; /* Reduzir o tamanho da fonte para o título */
+  }
+
+  .footer p {
+    font-size: 14px; /* Reduzir o tamanho da fonte para o texto */
+  }
+
+  .footer ul li {
+    margin-bottom: 5px; /* Reduzir a margem inferior dos itens da lista */
+  }
+  /* Alinhar os nomes abaixo de "Links Úteis" verticalmente */
+  .footer-section1 ul {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .footer-section1 ul li {
+    margin: 5px 0; /* Espaçamento entre os nomes */
+  }
+}
+
+
+
+
+
 
 /* Estilos para a imagem dentro dos elementos <li> */
 ul li img {
