--- a/style.css
+++ b/style.css
@@ -450,6 +450,36 @@ h3 {
   color: #68a897;
   text-align: center;
 }
+
+/* Estilos para dispositivos móveis */
+@media (max-width: 768px) {
+  .profissionais, .footer{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    overflow: hidden;
+    
+  }
+
+  .profissional, .footer-section, .footer-section1 {
+    width: 100%; 
+    margin-bottom: 20px; /* Adiciona espaço entre as divs */
+    overflow: hidden;
+  }
+
+  .especializacoes {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+   .quadrado-espec {
+    width: 90%;
+    margin-bottom: 20px;
+    overflow: hidden;
+  }
+
+}
+
 /*SLAIDE INICIAL*/
 .imagem-inicial img {
   margin-top: 10px;
@@ -636,36 +666,35 @@ h3 {
     font-size: 45px; /* Defina o tamanho de fonte menor para "Especializações" */
   }
 }
-
-
-/* Estilos para dispositivos móveis */
-@media (max-width: 768px) {
-  .profissionais, .footer{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    overflow: hidden;
-    
-  }
-
-  .profissional, .footer-section, .footer-section1 {
-    width: 100%; 
-    margin-bottom: 20px; /* Adiciona espaço entre as divs */
-    overflow: hidden;
-  }
-
-  .especializacoes {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-   .quadrado-espec {
-    width: 100%;
-    margin-bottom: 20px;
-    overflow: hidden;
-  }
-
+/* Estilos para o botão flutuante */
+.btn-top {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background-color: #75BFAB;
+  color: white;
+  border: none;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  text-align: center;
+  font-size: 24px;
+  cursor: pointer;
+  align-items: center; /* Centraliza verticalmente */
+  justify-content: center; /* Centraliza horizontalmente */
+ 
 }
 
+.btn-top img {
+  width: 40px;
+  height: 40px;
+  vertical-align: middle;
+  filter: invert(1);
+  /*margin-top: -6px; /* Mova a imagem 5 pixels para baixo */
+  /*margin-left: -5px; /* Afasta a imagem 5 pixels para a esquerda */
+}
 
-
+.btn-top:hover {
+  background-color: #68A897;
+}
