--- a/style.css
+++ b/style.css
@@ -569,10 +569,10 @@ h3 {
 .link-cadastro a:hover {
   color: #75bfab;
 }
-/* Media query para estilos específicos de telas menores */
+/* Media query para estilos específicos de telas menores de login/cadrastro*/
 @media screen and (max-width: 600px) {
   .login-container {
-    width: 90%; /* Redefine a largura para 90% para telas menores */
+    width: 80%; /* Redefine a largura para 90% para telas menores */
   }
 
   .login-container input {
@@ -649,6 +649,85 @@ h3 {
 
 .quadrado-espec button:hover {
   background-color: #5c8b7d;
+}
+
+
+
+
+
+
+
+
+/* RESPONSIVIDADE PARA CELULARES *//* RESPONSIVIDADE PARA CELULARES */
+/* RESPONSIVIDADE PARA CELULARES *//* RESPONSIVIDADE PARA CELULARES */
+/* RESPONSIVIDADE PARA CELULARES *//* RESPONSIVIDADE PARA CELULARES */
+/* RESPONSIVIDADE PARA CELULARES *//* RESPONSIVIDADE PARA CELULARES */
+
+
+/* Estilos para telas menores (celulares) (AREA DO FOOTER) /* Estilos para telas menores (celulares) */
+@media screen and (max-width: 600px) {
+  .footer {
+    text-align: center; /* Centralizar o conteúdo */
+    height: auto; /* Remover a altura fixa */
+  }
+
+  .container {
+    flex-direction: column; /* Empilhar os elementos verticalmente */
+  }
+
+  .footer h2 {
+    font-size: 30px; /* Reduzir o tamanho da fonte para o título */
+  }
+
+  .footer p {
+    font-size: 14px; /* Reduzir o tamanho da fonte para o texto */
+  }
+
+  .footer ul li {
+    margin-bottom: 5px; /* Reduzir a margem inferior dos itens da lista */
+  }
+  /* Alinhar os nomes abaixo de "Links Úteis" verticalmente */
+  .footer-section1 ul {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .footer-section1 ul li {
+    margin: 5px 0; /* Espaçamento entre os nomes */
+  }
+}*/
+@media screen and (max-width: 600px) {
+  .footer {
+    text-align: center; /* Centralizar o conteúdo */
+    height: auto; /* Remover a altura fixa */
+  }
+
+  .container {
+    flex-direction: column; /* Empilhar os elementos verticalmente */
+  }
+
+  .footer h2 {
+    font-size: 30px; /* Reduzir o tamanho da fonte para o título */
+  }
+
+  .footer p {
+    font-size: 14px; /* Reduzir o tamanho da fonte para o texto */
+  }
+
+  .footer ul li {
+    margin-bottom: 5px; /* Reduzir a margem inferior dos itens da lista */
+  }
+  /* Alinhar os nomes abaixo de "Links Úteis" verticalmente */
+  .footer-section1 ul {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .footer-section1 ul li {
+    margin: 5px 0; /* Espaçamento entre os nomes */
+  }
 }
 /* Media query para telas menores (celulares) */
 @media screen and (max-width: 600px) {
