🐽🐥 Checkpoint ./style.css:58483462/251

--- a/style.css
+++ b/style.css
@@ -566,10 +566,7 @@ h3 {
 }
 
 
-/* RESPONSIVIDADE PARA CELULARES */ /* RESPONSIVIDADE PARA CELULARES */
-/* RESPONSIVIDADE PARA CELULARES */ /* RESPONSIVIDADE PARA CELULARES */
-/* RESPONSIVIDADE PARA CELULARES */ /* RESPONSIVIDADE PARA CELULARES */
-/* RESPONSIVIDADE PARA CELULARES */ /* RESPONSIVIDADE PARA CELULARES */
+/* RESPONSIVIDADE PARA CELULARES */ 
 
 /* Estilos para dispositivos móveis (ARAE PROFISSIONAIS E ESPECIALIZAÇÕES)*/
 @media (max-width: 768px) {
