--- a/style.css
+++ b/style.css
@@ -14,28 +14,16 @@ ul {
 
 .nav-bar {
   background-color: #75bfab;
-  
   color: #ffffff;
   width: 100%;
   margin: 0 auto; /* Centralizar a nave bar horizontalmente */
   height: 140px; /* Espessura (altura) da nave bar */
-  display: flex;
   justify-content: space-between;
   align-items: flex-end;
-  position: relative; /* Posição relativa para a linha */
-  overflow: hidden;
 }
-
-.nav-bar::after {
-  content: "";
+.nav-bar img{
   position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 4px; /* Espessura (altura) da linha */
-  background-color: #68a897;
 }
-
 .nav-bar ul {
   list-style-type: none;
   text-align: center; /* Centralizar os itens */
@@ -53,6 +41,8 @@ ul {
   color: #0074cc;
   display: block;
 }
+
+
 /* Estilos para os nomes/link fora da nave bar */
 .nomes-links {
   text-align: center;
