--- a/style.css
+++ b/style.css
@@ -7,6 +7,29 @@ ul {
   padding: 0;
 }
 
+ul li {
+  list-style-type: none;
+  margin-bottom: 10px;
+}
+
+/* Estilos para a imagem dentro dos elementos <li> */
+ul li img {
+  width: 16px;
+  height: 16px;
+  margin-right: 5px;
+  vertical-align: middle;
+}
+
+h4 {
+  color: #68a897;
+  font-size: 23px;
+}
+
+h3 {
+  color: #526175;
+  margin-top: -12px;
+}
+
 .logo-text {
   font-size: 50px;
   margin: 10px;
@@ -56,6 +79,7 @@ ul {
 .nomes-links a {
   text-decoration: none;
   color: #75bfab;
+  font-size: 24px;
   margin: 0 20px;
   transition: color 0.3s;
 }
@@ -244,18 +268,6 @@ ul {
 .footer-section1 ul li {
   margin-left: 0;
 }
-ul li {
-  list-style-type: none;
-  margin-bottom: 10px;
-}
-
-/* Estilos para a imagem dentro dos elementos <li> */
-ul li img {
-  width: 16px;
-  height: 16px;
-  margin-right: 5px;
-  vertical-align: middle;
-}
 
 /* Solicitar atendimento*/
 .img-solicitar img {
@@ -334,8 +346,9 @@ input[type="datetime-local"] {
   padding: 20px;
   text-align: justify;
   margin: auto 60px;
-  width: 70%;
-  font-size: 20px;
+  width: 60%;
+  line-height: 28px;
+  font-size: 16px;
   font-family: "Montserrat", sans-serif;
 }
 .texto {
@@ -348,11 +361,6 @@ input[type="datetime-local"] {
   margin: auto 60px;
 }
 
-h3 {
-  color: #526175;
-  margin-top: -12px;
-}
-
 .profissional img {
   max-width: 100%;
   width: 250px;
@@ -361,6 +369,7 @@ h3 {
 }
 .profissional {
   color: #68a897;
+  margin-top: 20px;
   width: 20%;
   text-align: center;
 }
@@ -463,6 +472,7 @@ h3 {
 
 .especializacoes {
   display: flex;
+  margin-bottom: 30px;
   justify-content: space-around;
 }
 
@@ -477,16 +487,6 @@ h1 {
 
 text.esp {
   color: #red;
-}
-
-h4 {
-  color: #68a897;
-  font-size: 23px;
-}
-
-h3 {
-  color: #526175;
-  margin-top: -12px;
 }
 
 .quadrado-espec {
